    - allow-setuptools-8.patch, allow-pytest-8.patch,
      python-no-jemalloc.patch
  * leave use-debian-jemalloc.patch as a WIP to stop using
    vendored jemalloc
  * Don't autoclean source while building to help with packaging
  * Disable running cython tests during build process
    cython isn't able to find the libarrow libraries it needs
    without being installed

 -- Diane Trout <diane@ghic.org>  Thu, 04 Apr 2024 17:08:52 -0700

apache-arrow (7.0.0-1) UNRELEASED; urgency=medium

  [ Sascha Steinbiss ]
  * Debian upload.

  [ Diane Trout ]
  * Use Debian source for Brotli, OpenSSL, and Snappy
  * add use-debian-xsimd.patch to use Debian provided xsimd.
  * FindBrotli.cmake and libarrow_bundled_dependencies don't exist.
  * Install built FindThrift*.cmake scripts
  * Disable non-free nvidia dependency for now
  * Install readme, notice and license into the main -dev package
  * Turn off jemalloc as upstream wants to build from downloaded source
  * fail-missing files that are not installed to help develop packaging
  * Build and test pyarrow
  * add fix-upstream-watch to keep uscan from finding wrong arrow repositories
  * Add a more modern debian/watch file

 -- Sascha Steinbiss <satta@debian.org>  Sun, 20 Feb 2022 12:57:32 +0100

apache-arrow (4.0.0-1) unstable; urgency=low

  * New upstream release.

 -- Travis CI User <travis@example.org>  Wed, 21 Apr 2021 16:11:38 -0000

apache-arrow (4.0.0-1) unstable; urgency=low

  * New upstream release.

 -- Krisztián Szűcs <szucs.krisztian@gmail.com>  Wed, 21 Apr 2021 16:11:33 -0000

apache-arrow (3.0.0-1) unstable; urgency=low

  * New upstream release.

 -- Krisztián Szűcs <szucs.krisztian@gmail.com>  Mon, 18 Jan 2021 21:33:18 -0000

apache-arrow (2.0.0-1) unstable; urgency=low

  * New upstream release.

 -- Krisztián Szűcs <szucs.krisztian@gmail.com>  Mon, 12 Oct 2020 23:38:01 -0000

apache-arrow (1.0.0-1) unstable; urgency=low

  * New upstream release.
