@@ -77,7 +77,7 @@ override_dh_auto_build:
 	dh_auto_install				\
 	  --sourcedirectory=cpp			\
 	  --builddirectory=cpp_build
-	PYARROW_CMAKE_OPTIONS="-DARROW_HOME=$(CURDIR)/debian/tmp/usr" dh_auto_build \
+	Arrow_DIR=$(CURDIR)/debian/tmp/usr dh_auto_build \
 	  --buildsystem=pybuild \
 	  --sourcedirectory=python
 
@@ -91,7 +91,10 @@ override_dh_auto_install:
 	  --sourcedirectory=cpp			\
 	  --builddirectory=cpp_build
 
-	dh_auto_install --buildsystem=pybuild --sourcdirectory=python
+	dh_auto_install \
+	  --buildsystem=pybuild \
+	  --sourcedirectory=python
+	rm -rf debian/tmp/usr/lib/python*/dist-packages/.pytest_cache/
 
 override_dh_auto_test:
 	# pass
