@@ -22,6 +22,7 @@ apache-arrow (15.0.2-1) UNRELEASED; urgency=medium
   * Disable running cython tests during build process
     cython isn't able to find the libarrow libraries it needs
     without being installed
+  * Build and install python component
 
  -- Diane Trout <diane@ghic.org>  Thu, 04 Apr 2024 17:08:52 -0700
 
